--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,26 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <header>
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit" class="default-button search-button">
+          <svg class="icon-search">
+            <use href="images/symbol-defs.svg#icon-search"></use>
+          </svg>
+        </button>
+      </form>
+    </header>
+    <div class="gallery"></div>
+    <button type="button" class="default-button load-more">
+      <p>Load more</p>
+    </button>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- <include src="./partials/example.html"></include> -->
   </body>
 </html>
